add `x = date` to trace in user-guide example

--- a/_posts/2015-07-30-r-index.md
+++ b/_posts/2015-07-30-r-index.md
@@ -77,6 +77,8 @@ This allows us to mix data manipulation and visualization verbs in a [pure(ly) f
 ```r
 p %>%
   add_trace(y = fitted(loess(uempmed ~ as.numeric(date))), x = date) %>%
+  add_trace(x = date,
+            y = fitted(loess(uempmed ~ as.numeric(date)))) %>%
   layout(title = "Median duration of unemployment (in weeks)",
          showlegend = FALSE) %>%
   dplyr::filter(uempmed == max(uempmed)) %>%
