--- a/_posts/r/2015-07-30-user-guide.Rmd
+++ b/_posts/r/2015-07-30-user-guide.Rmd
@@ -59,7 +59,7 @@ You can manually add a trace to an existing plot with `add_trace()`. In that cas
 ```{r, results='hide'}
 m <- loess(unemploy / pop ~ as.numeric(date), data = economics)
 p <- plot_ly(economics, x = date, y = unemploy / pop, name = "raw")
-p <- add_trace(p, y = fitted(m), name = "loess")
+p <- add_trace(p, x = date, y = fitted(m), name = "loess")
 p
 ```
 ```{r, results='asis', echo=FALSE, message=FALSE}
@@ -72,7 +72,7 @@ __plotly__ was designed with a [pure, predictable, and pipeable interface](https
 ```{r, results='hide'}
 p <- economics %>%
   plot_ly(x = date, y = unemploy / pop) %>%
-  add_trace(y = fitted(m)) %>%
+  add_trace(x = date, y = fitted(m)) %>%
   layout(showlegend = F)
 p
 ```
@@ -137,7 +137,7 @@ p <- p %>% plotly_POST(filename="r-user-guide/qualitative")
 cat('<iframe style="border: none; width: 100%; height: 550px" src="', p$url, '.embed"></iframe>', sep='')
 ```
 
-If you want to change the default palette, it's recommended that you provide a <http://colorbrewer2.org> qualitative pallette name (e.g., "Set1" or "Accent") to the colors argument.
+If you want to change the default palette, it's recommended that you provide a <http://colorbrewer2.org> qualitative palette name (e.g., "Set1" or "Accent") to the colors argument.
 
 ```{r, results='hide'}
 p <- plot_ly(iris, x = Petal.Length, y = Petal.Width,
@@ -182,7 +182,7 @@ p <- p %>% plotly_POST(filename="r-user-guide/sequential")
 cat('<iframe style="border: none; width: 100%; height: 550px" src="', p$url, '.embed"></iframe>', sep='')
 ```
 
-In the case of continuous numeric variables, `plot_ly()` performs a linear mapping between the data and an interpolated color pallette.
+In the case of continuous numeric variables, `plot_ly()` performs a linear mapping between the data and an interpolated color palette.
 
 ```{r, results='hide'}
 p <- plot_ly(iris, x = Petal.Length, y = Petal.Width,
