--- a/_posts/r/2015-07-30-user-guide.Rmd
+++ b/_posts/r/2015-07-30-user-guide.Rmd
@@ -231,7 +231,7 @@ p <- p %>% plotly_POST(filename="r-user-guide/symbols")
 cat('<iframe style="border: none; width: 100%; height: 550px" src="', p$url, '.embed"></iframe>', sep='')
 ```
 
-To change the default symbols used, use the symbols argument. All the valid symbol types are listed [here](https://plot.ly/r/reference/#marker).
+To change the default symbols used, use the symbols argument. All the valid symbol types are listed [here](https://plot.ly/r/reference/#scatter-marker-symbol).
 
 ```{r, results='hide'}
 p <- plot_ly(iris, x = Petal.Length, y = Petal.Width, mode = "markers",
