changed publisher cells

--- a/_posts/python/3d-camera-controls/3d-camera-controls.ipynb
+++ b/_posts/python/3d-camera-controls/3d-camera-controls.ipynb
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -339,17 +339,17 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning:\n",
-      "\n",
-      "The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
-      "\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n"
+      "Collecting git+https://github.com/plotly/publisher.git\n",
+      "  Cloning https://github.com/plotly/publisher.git to /var/folders/j3/gt_q6y096cjfts4q8zq2dm2c0000gn/T/pip-7EVkQU-build\n",
+      "Installing collected packages: publisher\n",
+      "  Found existing installation: publisher 0.10\n",
+      "    Uninstalling publisher-0.10:\n",
+      "      Successfully uninstalled publisher-0.10\n",
+      "  Running setup.py install for publisher\n",
+      "Successfully installed publisher-0.10\n"
      ]
     }
    ],
@@ -359,7 +359,8 @@
     "display(HTML('<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />'))\n",
     "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
     "\n",
-    "#! pip install publisher --upgrade\n",
+    "! pip install git+https://github.com/plotly/publisher.git --upgrade\n",
+    "    \n",
     "import publisher\n",
     "publisher.publish(\n",
     "    '3d-camera-controls.ipynb', 'python/3d-camera-controls/', 'Python 3D Camera Controls | plotly',\n",
