--- a/_posts/python/WebGL/webgl.ipynb
+++ b/_posts/python/WebGL/webgl.ipynb
@@ -260,8 +260,9 @@
     "    'Implement WebGL for increased speed, improved interactivity, and the ability to plot even more data!',\n",
     "    title = 'Python WebGL vs SVG | plotly',\n",
     "    name = 'WebGL vs SVG',\n",
-    "    thumbnail='thumbnail/webgl.jpg', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=1)"
+    "    has_thumbnail='true', thumbnail='thumbnail/webgl.jpg', \n",
+    "    language='python', page_type='example_index', \n",
+    "    display_as='chart_type', order=1)"
    ]
   },
   {
@@ -290,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
