added notebooks and changing publisher cells

--- a/_posts/python/3d-camera-controls/3d-camera-controls.ipynb
+++ b/_posts/python/3d-camera-controls/3d-camera-controls.ipynb
@@ -308,8 +308,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Reference"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See https://plot.ly/python/reference/#layout-scene-camera for more information and chart attribute options!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -343,7 +357,7 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://github.com/plotly/publisher.git\n",
-      "  Cloning https://github.com/plotly/publisher.git to /var/folders/j3/gt_q6y096cjfts4q8zq2dm2c0000gn/T/pip-7EVkQU-build\n",
+      "  Cloning https://github.com/plotly/publisher.git to /var/folders/j3/gt_q6y096cjfts4q8zq2dm2c0000gn/T/pip-F1PPRb-build\n",
       "Installing collected packages: publisher\n",
       "  Found existing installation: publisher 0.10\n",
       "    Uninstalling publisher-0.10:\n",
@@ -364,7 +378,7 @@
     "import publisher\n",
     "publisher.publish(\n",
     "    '3d-camera-controls.ipynb', 'python/3d-camera-controls/', 'Python 3D Camera Controls | plotly',\n",
-    "    'How to control Camera in your 3D Charts in Python with Plotly.',\n",
+    "    'How to Control the Camera in your 3D Charts in Python with Plotly.',\n",
     "    title= 'Python 3D Camera Controls | plotly',\n",
     "    name = '3D Camera Controls',\n",
     "    has_thumbnail='true', thumbnail='thumbnail/3d-camera-controls.jpg', \n",
