--- a/_posts/python/3d-surface-coloring/3d_surface_coloring.ipynb
+++ b/_posts/python/3d-surface-coloring/3d_surface_coloring.ipynb
@@ -6,40 +6,8 @@
     "collapsed": true
    },
    "source": [
-    "### 3D Surface Coloring in Python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
     "Learn about API authentication here: https://plot.ly/python/getting-started <br>\n",
     "Find your api_key here: https://plot.ly/settings/api"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.9.9'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import plotly\n",
-    "plotly.__version__"
    ]
   },
   {
@@ -51,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -168,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -176,13 +144,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~kevintest/417.embed\" height=\"800px\" width=\"950px\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~demo_account/92.embed\" height=\"800px\" width=\"950px\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,8 +160,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Reference"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See https://plot.ly/python/reference/#surface for more information!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -226,13 +208,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
+      "Collecting git+https://github.com/plotly/publisher.git\n",
+      "  Cloning https://github.com/plotly/publisher.git to /var/folders/j3/gt_q6y096cjfts4q8zq2dm2c0000gn/T/pip-IPbQMX-build\n",
+      "Installing collected packages: publisher\n",
+      "  Found existing installation: publisher 0.10\n",
+      "    Uninstalling publisher-0.10:\n",
+      "      Successfully uninstalled publisher-0.10\n",
+      "  Running setup.py install for publisher\n",
+      "Successfully installed publisher-0.10\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning:\n",
+      "\n",
+      "The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
+      "\n",
       "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
       "\n",
       "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
@@ -250,14 +243,17 @@
     "display(HTML('<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />'))\n",
     "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
     "\n",
-    "! pip install publisher --upgrade\n",
+    "! pip install git+https://github.com/plotly/publisher.git --upgrade\n",
+    "    \n",
     "import publisher\n",
     "publisher.publish(\n",
     "    '3d_surface_coloring.ipynb', 'python/3d-surface-coloring//', '3D Python Surface Coloring | plotly',\n",
     "    'How to Color 3D Surface Plots in Python with Plotly.',\n",
+    "    title = '3D Surface Coloring in Python | plotly',\n",
     "    name = '3D Surface Coloring',\n",
-    "    thumbnail='thumbnail/3d-scatter.jpg', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='3d_charts', order=1)"
+    "    has_thumbnail='true', thumbnail='thumbnail/3d-scatter.jpg', \n",
+    "    language='python', page_type='example_index', \n",
+    "    display_as='3d_charts', order=12)"
    ]
   },
   {
