changed plot to iplot to get the graph

--- a/_posts/python/3d-clusters/3d-clusters.ipynb
+++ b/_posts/python/3d-clusters/3d-clusters.ipynb
@@ -9,11 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~demo_account/94.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import plotly.plotly as py\n",
     "import pandas as pd\n",
@@ -45,7 +59,7 @@
     ")\n",
     "fig = dict( data=[scatter, clusters], layout=layout )\n",
     "# Use py.iplot() for IPython notebook\n",
-    "url = py.plot(fig, filename='3d point clustering')"
+    "py.iplot(fig, filename='3d point clustering')"
    ]
   },
   {
@@ -59,12 +73,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See https://plot.ly/python/reference/#surface for more information regarding subplots!"
+    "See https://plot.ly/python/reference/ for more information regarding subplots!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -98,7 +112,7 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://github.com/plotly/publisher.git\n",
-      "  Cloning https://github.com/plotly/publisher.git to /var/folders/j3/gt_q6y096cjfts4q8zq2dm2c0000gn/T/pip-_m_tdM-build\n",
+      "  Cloning https://github.com/plotly/publisher.git to /var/folders/j3/gt_q6y096cjfts4q8zq2dm2c0000gn/T/pip-CwSehH-build\n",
       "Installing collected packages: publisher\n",
       "  Found existing installation: publisher 0.10\n",
       "    Uninstalling publisher-0.10:\n",
