ipynb conversion and edits to publisher cell

--- a/_posts/python/3d-network/Les-miserables-network.ipynb
+++ b/_posts/python/3d-network/Les-miserables-network.ipynb
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -393,7 +393,7 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://github.com/plotly/publisher.git\n",
-      "  Cloning https://github.com/plotly/publisher.git to /var/folders/j3/gt_q6y096cjfts4q8zq2dm2c0000gn/T/pip-JqLVQx-build\n",
+      "  Cloning https://github.com/plotly/publisher.git to /var/folders/j3/gt_q6y096cjfts4q8zq2dm2c0000gn/T/pip-BmEvUv-build\n",
       "Installing collected packages: publisher\n",
       "  Found existing installation: publisher 0.10\n",
       "    Uninstalling publisher-0.10:\n",
@@ -417,7 +417,7 @@
     "    'How to make 3D Network Graphs in Python. ',\n",
     "    title = '3D Network Graphs in Python | plotly',\n",
     "    name = '3D Network Graphs',\n",
-    "    has_thumbnail='true', thumbnail='/thumbnail/3dnetwork.jpg', \n",
+    "    has_thumbnail='true', thumbnail='thumbnail/3dnetwork.jpg', \n",
     "    language='python', page_type='example_index', \n",
     "    display_as='3d_charts', order=10)"
    ]
