--- a/_posts/python/3d-clusters/3d-clusters.ipynb
+++ b/_posts/python/3d-clusters/3d-clusters.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -112,13 +112,23 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://github.com/plotly/publisher.git\n",
-      "  Cloning https://github.com/plotly/publisher.git to /var/folders/j3/gt_q6y096cjfts4q8zq2dm2c0000gn/T/pip-CwSehH-build\n",
+      "  Cloning https://github.com/plotly/publisher.git to /var/folders/j3/gt_q6y096cjfts4q8zq2dm2c0000gn/T/pip-15gyAz-build\n",
       "Installing collected packages: publisher\n",
       "  Found existing installation: publisher 0.10\n",
       "    Uninstalling publisher-0.10:\n",
       "      Successfully uninstalled publisher-0.10\n",
       "  Running setup.py install for publisher\n",
       "Successfully installed publisher-0.10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning: The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
+      "  \"You should import from nbconvert instead.\", ShimWarning)\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
      ]
     }
    ],
@@ -133,9 +143,9 @@
     "import publisher\n",
     "publisher.publish(\n",
     "    '3d-clusters.ipynb', 'python/3d-point-clustering/', 'Python 3D Clustering | plotly',\n",
-    "    'How to cluster points in 3d with alpha shapes in Python and Plotly',\n",
+    "    'How to cluster points in 3d with alpha shapes in plotly and Python',\n",
     "    title= '3D Point Clustering in Python | plotly',\n",
-    "    name = 'How to cluster points in 3d',\n",
+    "    name = '3d Clustering',\n",
     "    has_thumbnail='true', thumbnail='thumbnail/3d-clusters.jpg', \n",
     "    language='python', page_type='example_index', \n",
     "    display_as='3d_charts', order=11)"
