--- a/_posts/python/3d-scatter/3d_scatter.ipynb
+++ b/_posts/python/3d-scatter/3d_scatter.ipynb
@@ -6,15 +6,6 @@
     "collapsed": true
    },
    "source": [
-    "## 3D Scatter Plots in Python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
     "Learn about API authentication here: https://plot.ly/python/getting-started <br>\n",
     "Find your api_key here: https://plot.ly/settings/api"
    ]
@@ -46,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3D Scatter Plot"
+    "#### Basic 3D Scatter Plot"
    ]
   },
   {
@@ -59,7 +50,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~tarzzz/2279.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~demo_account/119.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
@@ -130,10 +121,7 @@
     "collapsed": true
    },
    "source": [
-    "\n",
-    "---\n",
-    "\n",
-    "### 3D Scatter Plot with Colorscaling"
+    "#### 3D Scatter Plot with Colorscaling"
    ]
   },
   {
@@ -146,7 +134,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~tarzzz/2281.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~demo_account/121.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
@@ -192,13 +180,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Reference"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For more information, see https://plot.ly/python/reference/#scatter3d"
+   ]
   },
   {
    "cell_type": "code",
@@ -250,9 +245,11 @@
     "publisher.publish(\n",
     "    '3d_scatter.ipynb', 'python/3d-scatter-plots/', '3D Python Scatter Plots | plotly',\n",
     "    'How to make 3D scatter plots in Python with Plotly.',\n",
+    "    title = '3D Python Scatter Plots | plotly',\n",
     "    name = '3D Scatter Plots',\n",
-    "    thumbnail='thumbnail/3d-scatter.jpg', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='3d_charts', order=1)"
+    "    has_thumbnail='true', thumbnail='thumbnail/3d-scatter.jpg', \n",
+    "    language='python', page_type='example_index', \n",
+    "    display_as='3d_charts', order=1)"
    ]
   },
   {
@@ -281,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
