--- a/_posts/python/3d-filled-line/3d-filled-line.ipynb
+++ b/_posts/python/3d-filled-line/3d-filled-line.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -138,13 +138,23 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://github.com/plotly/publisher.git\n",
-      "  Cloning https://github.com/plotly/publisher.git to /var/folders/j3/gt_q6y096cjfts4q8zq2dm2c0000gn/T/pip-AtpAGH-build\n",
+      "  Cloning https://github.com/plotly/publisher.git to /var/folders/j3/gt_q6y096cjfts4q8zq2dm2c0000gn/T/pip-PLJ3Bv-build\n",
       "Installing collected packages: publisher\n",
       "  Found existing installation: publisher 0.10\n",
       "    Uninstalling publisher-0.10:\n",
       "      Successfully uninstalled publisher-0.10\n",
       "  Running setup.py install for publisher\n",
       "Successfully installed publisher-0.10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning: The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
+      "  \"You should import from nbconvert instead.\", ShimWarning)\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
      ]
     }
    ],
@@ -161,7 +171,7 @@
     "    'How to make 3D Filled Line Plots in Python',\n",
     "    title = '3D Filled Line Plots in Python | plotly',\n",
     "    name = '3D Filled Line Plots',\n",
-    "    has_thumbnail='true', thumbnail='/images/ribbon-plot.png', \n",
+    "    has_thumbnail='true', thumbnail='thumbnail/3d-filled-line-plot.jpg', \n",
     "    language='python', page_type='example_index', \n",
     "    display_as='3d_charts', order=4)"
    ]
