--- a/_posts/python/3d-ribbon/ribbon.ipynb
+++ b/_posts/python/3d-ribbon/ribbon.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -115,13 +115,23 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://github.com/plotly/publisher.git\n",
-      "  Cloning https://github.com/plotly/publisher.git to /var/folders/j3/gt_q6y096cjfts4q8zq2dm2c0000gn/T/pip-58pjqI-build\n",
+      "  Cloning https://github.com/plotly/publisher.git to /var/folders/j3/gt_q6y096cjfts4q8zq2dm2c0000gn/T/pip-X3b_tV-build\n",
       "Installing collected packages: publisher\n",
-      "  Found existing installation: publisher 0.10\n",
-      "    Uninstalling publisher-0.10:\n",
-      "      Successfully uninstalled publisher-0.10\n",
+      "  Found existing installation: publisher 0.11\n",
+      "    Uninstalling publisher-0.11:\n",
+      "      Successfully uninstalled publisher-0.11\n",
       "  Running setup.py install for publisher\n",
       "Successfully installed publisher-0.10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning: The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
+      "  \"You should import from nbconvert instead.\", ShimWarning)\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
      ]
     }
    ],
@@ -138,7 +148,7 @@
     "    'How to make ribbon plots in Python. ',\n",
     "    title = 'Python Ribbon Plots | plotly',\n",
     "    name = 'Ribbon Plots',\n",
-    "    has_thumbnail='true', thumbnail='/images/ribbon-plot.png', \n",
+    "    has_thumbnail='true', thumbnail='thumbnail/ribbon-plot.jpg', \n",
     "    language='python', page_type='example_index', \n",
     "    display_as='3d_charts', order=5)"
    ]
