--- a/_posts/python/3d-line/3d-line.ipynb
+++ b/_posts/python/3d-line/3d-line.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -169,7 +169,7 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://github.com/plotly/publisher.git\n",
-      "  Cloning https://github.com/plotly/publisher.git to /var/folders/j3/gt_q6y096cjfts4q8zq2dm2c0000gn/T/pip-eAYc2t-build\n",
+      "  Cloning https://github.com/plotly/publisher.git to /var/folders/j3/gt_q6y096cjfts4q8zq2dm2c0000gn/T/pip-_s5xo8-build\n",
       "Installing collected packages: publisher\n",
       "  Found existing installation: publisher 0.10\n",
       "    Uninstalling publisher-0.10:\n",
@@ -182,14 +182,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning:\n",
-      "\n",
-      "The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
-      "\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n"
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning: The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
+      "  \"You should import from nbconvert instead.\", ShimWarning)\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
      ]
     }
    ],
@@ -203,11 +199,11 @@
     "    \n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    '3d-line.ipynb', 'python/3d-point-clustering/', 'Python 3D Clustering | plotly',\n",
+    "    '3d-line.ipynb', 'python/3d-line-plots/', 'Python 3D Line Plots | plotly',\n",
     "    'How to make 3D Line Plots',\n",
     "    title= '3D Line Plots in Python | plotly',\n",
     "    name = '3D Line Plots',\n",
-    "    has_thumbnail='true', thumbnail='python/3d-line-plots/', \n",
+    "    has_thumbnail='true', thumbnail='thumbnail/3d-line.jpg', \n",
     "    language='python', page_type='example_index', \n",
     "    display_as='3d_charts', order=3)"
    ]
