Fixing the plot

--- a/_posts/python/heatmap-webgl/heatmap-webgl.ipynb
+++ b/_posts/python/heatmap-webgl/heatmap-webgl.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Downloading the image:"
+    "### Downloading the image:"
    ]
   },
   {
@@ -40,7 +40,7 @@
    },
    "outputs": [],
    "source": [
-    "image_url = 'https://s-media-cache-ak0.pinimg.com/736x/26/63/9a/26639a3cf8d30c21a9a2ca65695712d9.jpg'\n",
+    "image_url = 'https://images.plot.ly/plotly-documentation/images/heatmap-galaxy.jpg'\n",
     "f = cStringIO.StringIO(urllib.urlopen(image_url).read())\n",
     "img = PIL.Image.open(f)"
    ]
@@ -72,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Processing the image for generating heatmap:"
+    "### Processing the image for generating heatmap:"
    ]
   },
   {
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generating the heatmap:"
+    "### Generating the heatmap:"
    ]
   },
   {
@@ -133,24 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test output\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -178,20 +161,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "//anaconda/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning:\n",
-      "\n",
-      "The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
-      "\n",
-      "//anaconda/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n"
-     ]
     }
    ],
    "source": [
