fixed examples `loess smooth` examples

--- a/_posts/2015-07-30-r-index.md
+++ b/_posts/2015-07-30-r-index.md
@@ -76,7 +76,7 @@ This allows us to mix data manipulation and visualization verbs in a [pure(ly) f
 
 ```r
 p %>%
-  add_trace(y = fitted(loess(uempmed ~ as.numeric(date)))) %>%
+  add_trace(y = fitted(loess(uempmed ~ as.numeric(date))), x = date) %>%
   layout(title = "Median duration of unemployment (in weeks)",
          showlegend = FALSE) %>%
   dplyr::filter(uempmed == max(uempmed)) %>%
