remove deperecated items

--- a/_posts/python/ipython-widgets/plotly_widgets.ipynb
+++ b/_posts/python/ipython-widgets/plotly_widgets.ipynb
@@ -1294,6 +1294,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "graph #display the graph again"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {
     "collapsed": false
@@ -1303,14 +1314,6 @@
     "from IPython.html import widgets # Widget definitions\n",
     "import json\n",
     "import time\n",
-    "\n",
-    "def info_popup(info):\n",
-    "    popup = widgets.PopupWidget(\n",
-    "        description='Scroll up to see the embedded plotly graph update',\n",
-    "        children=[widgets.HTMLWidget(value=json.dumps(info,indent=4).replace('\\n', '<br>').replace(' ', '&nbsp'))]\n",
-    "    )\n",
-    "    popup.set_css('display', 'none', selector='.btn')\n",
-    "    return popup\n",
     "\n",
     "style_sequence = [\n",
     "    # Clear graph\n",
@@ -1337,8 +1340,8 @@
     "    # Add data\n",
     "    {\n",
     "        'data': {\n",
-    "            'x': [[1,2,3], \n",
-    "                  [1, 2, 4]], \n",
+    "            'x': [[1,2,3],\n",
+    "                  [1, 2, 4]],\n",
     "         'y': [[10,20,30],\n",
     "               [5, 8, 14]]\n",
     "        },\n",
@@ -1405,8 +1408,6 @@
     "]\n",
     "\n",
     "for s in style_sequence:\n",
-    "    popup = info_popup(s)\n",
-    "    # display(popup)\n",
     "    if 'data' in s:\n",
     "        if 'traces' in s:\n",
     "            g.restyle(s['data'], indices=s['traces'])\n",
@@ -1417,9 +1418,7 @@
     "    if 'hover' in s:\n",
     "        g.hover(s['hover'])\n",
     "    time.sleep(3)\n",
-    "\n",
-    "    popup.close()\n",
-    "    clear_output()"
+    "\n"
    ]
   },
   {
@@ -1517,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -1550,21 +1549,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: publisher in /anaconda/lib/python2.7/site-packages\r\n"
+      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "//anaconda/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning:\n",
-      "\n",
-      "The `IPython.nbconvert` package has been deprecated. You should import from ipython_nbconvert instead.\n",
-      "\n",
-      "//anaconda/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n"
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:58: UserWarning: Your URL has more than 2 parts... are you sure?\n",
+      "  warnings.warn('Your URL has more than 2 parts... are you sure?')\n"
      ]
     }
    ],
@@ -1577,7 +1570,7 @@
     "! pip install publisher --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    'plotly_widgets.ipynb', 'python/ipython-widgets/', 'IPython Notebook Widgets | plotly',\n",
+    "    'plotly_widgets.ipynb', 'python/ipython-widgets//', 'IPython Notebook Widgets | plotly',\n",
     "    'How to make IPython Notebook Widgets in Python with Plotly.',\n",
     "    name = 'IPython Notebook Widgets',\n",
     "    thumbnail='thumbnail/ipython_widgets.jpg', language='python',\n",
@@ -1610,7 +1603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
