update bar-charts rmd

--- a/_posts/r/2015-07-30-bar-charts.Rmd
+++ b/_posts/r/2015-07-30-bar-charts.Rmd
@@ -27,9 +27,7 @@ p <- plot_ly(
   x = c("giraffes", "orangutans", "monkeys"),
   y = c(20, 14, 23),
   name = "SF Zoo",
-  type = "bar",
-  filename="r-docs/simple-bar"
-)
+  type = "bar")
 p
 
 p2 <- add_trace(
@@ -37,12 +35,11 @@ p2 <- add_trace(
   x = c("giraffes", "orangutans", "monkeys"),
   y = c(12, 18, 29),
   name = "LA Zoo",
-  filename="r-docs/simple-bars"
-)
+  type = "bar")
 p2
 
-layout(p2, barmode = "stack")
-
+p3 <- layout(p2, barmode = "stack")
+p3
 ## customizing colors
 
 library(dplyr)
