fixing yaml of git tutorial

--- a/_posts/r/2016-05-06-git-data-scientists.Rmd
+++ b/_posts/r/2016-05-06-git-data-scientists.Rmd
@@ -9,11 +9,7 @@ language: r
 page_type: example_index
 has_thumbnail: true
 display_as: get_request
-output: 
-html_document: 
-highlight: null
-keep_md: yes
-theme: null
+order: 12
 ---
 
 ```{r, message=FALSE, echo = FALSE, message = FALSE}
