fixing yaml of git tutorial again to match the webgl, added thumbnail

--- a/_posts/r/2016-05-06-git-data-scientists.Rmd
+++ b/_posts/r/2016-05-06-git-data-scientists.Rmd
@@ -3,13 +3,13 @@ title: GitHub | Tutorial | Plotly
 name: GitHub for Data Scientists without the Terminal
 permalink: r/github-getting-started-for-data-scientists/
 description: Introduction to GitHub for Data Scientists without the Terminal
-layout: base
-thumbnail: thumbnail/shapes.jpg
+layout: user-guide
 language: r
 page_type: example_index
+display_as: basic
+order: 13
+thumbnail: thumbnail/gitgithub.jpg
 has_thumbnail: true
-display_as: get_request
-order: 12
 ---
 
 ```{r, message=FALSE, echo = FALSE, message = FALSE}
