--- a/_posts/r/2016-05-06-git-data-scientists.Rmd
+++ b/_posts/r/2016-05-06-git-data-scientists.Rmd
@@ -19,6 +19,9 @@ Sys.setenv("plotly_username"="RPlotBot")
 Sys.setenv("plotly_api_key"="q0lz6r5efr")
 ```
 
+## GitHub for Data Scientists wihtout the terminal
+
+
 by [Sahir Bhatnagar](http://sahirbhatnagar.com/)
 
 
@@ -38,9 +41,19 @@ assume basic knowledge of `R` and `RStudio`.
 
 ### What
 
-The outline is provided in the floating table of contents. You will learn the essential 
+The outline is provided below. You will learn the essential 
 concepts and terminology of version control, Git, GitHub and GitHub desktop. This 
 tutorial follows a _learn-by-doing_ approach. 
+
+1. Installing Git
+2. Signup for a GitHub account and a Hello World tutorial
+3. Installing GitHub Desktop
+4. Version control `R` code using an example of PCA 
+5. Create a branch, pull request and merge
+6. Introduction to Git functionality in RStudio
+7. Create and publish an `R Markdown` document 
+8. Create an online CV
+
 
 ### Why
 
