fixed typo in github tutorial post

--- a/_posts/r/2016-05-06-git-data-scientists.Rmd
+++ b/_posts/r/2016-05-06-git-data-scientists.Rmd
@@ -19,7 +19,7 @@ Sys.setenv("plotly_username"="RPlotBot")
 Sys.setenv("plotly_api_key"="q0lz6r5efr")
 ```
 
-## GitHub for Data Scientists wihtout the terminal
+## GitHub for Data Scientists without the terminal
 
 
 by [Sahir Bhatnagar](http://sahirbhatnagar.com/)
