changed the filename of the new example

--- a/_posts/python/distplot/distplots.ipynb
+++ b/_posts/python/distplot/distplots.ipynb
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -321,7 +321,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -367,13 +367,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~kevintest/861.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~kevintest/870.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
     "fig['layout'].update(title='Hist and Rug Plot')\n",
     "\n",
     "# Plot!\n",
-    "py.iplot(fig, filename='Hist and Rug', validate=False)"
+    "py.iplot(fig, filename='Hist and Rug Different Bin Size', validate=False)"
    ]
   },
   {
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -670,14 +670,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting publisher from https://pypi.python.org/packages/ad/a7/d5ed32efd56d021242e53b3c03aec8c4a705ea2ce9b2ed453b349fa9e965/publisher-0.11.tar.gz#md5=c9835b861ffca24364e63bf5f398652b\n",
-      "  Using cached publisher-0.11.tar.gz\n",
-      "Installing collected packages: publisher\n",
-      "  Found existing installation: publisher 0.10\n",
-      "    Uninstalling publisher-0.10:\n",
-      "      Successfully uninstalled publisher-0.10\n",
-      "  Running setup.py install for publisher\n",
-      "Successfully installed publisher-0.11\n"
+      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
      ]
     },
     {
