--- a/_posts/r/2015-07-30-dot-plots.md
+++ b/_posts/r/2015-07-30-dot-plots.md
@@ -20,7 +20,8 @@ s <- s[order(s$Men), ]
 library(plotly)
 p <- plot_ly(s, x = Women, y = School, name = "Women",
              mode = "markers", marker = list(color = "pink")) %>%
-  add_trace(x = Men, name = "Men", marker = list(color = "blue")) %>%
+  add_trace(x = Men, name = "Men", y = School, marker = list(color = "blue"),
+            mode = "markers") %>%
   layout(
     title = "Gender earnings disparity",
     xaxis = list(title = "Annual Salary (in thousands)"),
