--- a/_posts/r/2015-07-30-box-plots.md
+++ b/_posts/r/2015-07-30-box-plots.md
@@ -20,7 +20,7 @@ order: 2
 library(plotly)
 ### basic boxplot
 plot_ly(y = rnorm(50), type = "box") %>%
-  add_trace(y = rnorm(50, 1))
+  add_trace(y = rnorm(50, 1), type = "box")
 ```
 
 <iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/197.embed" width="800" frameBorder="0"></iframe>
